--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100;300;400;500;600;700&display=swap" rel="stylesheet">
     <title>Practice Studio App</title>
     <style>
       input[type="checkbox"] {
@@ -14,25 +18,31 @@
   </head>
 
   <body>
-    <form id="addSongForm">
-      <label> input song </label>
-      <input id="inputSong" type="text" />
-      <button type="submit">Submit</button>
-    </form>
+    <main>
 
-    <table>
-      <thead>
-        <tr>
-          <th>Song</th>
-          <th>Duncan</th>
-          <th>Ivan</th>
-          <th>Christian</th>
-          <th>Emiliano</th>
-          <th>Action</th>
-        </tr>
-      </thead>
-      <tbody id="songlist"></tbody>
-    </table>
+      <img src="./img/rothLogoYellow.png" alt="rothos">
+      <h1>SONGLIST CHECK</h1>
+
+      <form id="addSongForm">
+        <label> Input song </label>
+        <input id="inputSong" type="text" />
+        <button type="submit">Submit</button>
+      </form>
+  
+      <table>
+        <thead>
+          <tr>
+            <th>Song</th>
+            <th>Duncan</th>
+            <th>Ivan</th>
+            <th>Christian</th>
+            <th>Emiliano</th>
+            <th>Action</th>
+          </tr>
+        </thead>
+        <tbody id="songlist"></tbody>
+      </table>
+    </main>
 
     <script type="module" src="./static/index.js"></script>
   </body>
